# rending

./: Cargo.toml  test.wgsl
assets/shaders/: image_to_ascii.wgsl
assets/text/: levels.txt
crates/rending_builder/: Cargo.toml  README.md
crates/rending_builder/src/: buffer.rs  lib.rs  sampler.rs  tex_ext.rs  texture.rs
crates/rending_reflect/: Cargo.toml
crates/rending_reflect/examples/: image_to_ascii.rs
crates/rending_reflect/src/: lib.rs
examples/: image_to_ascii.rs
src/: bitset.rs  commands.rs  context.rs  graph.rs  lib.rs  named_slotmap.rs  node.rs  prelude.rs  reflect.rs  resources.rs  spirv_iter.rs  util.rs  vecpool.rs
src/commands/: compute_pass.rs  inout.rs  mod.rs  pass.rs
src/resources/: bindgroup.rs  buffer.rs  layout.rs  mod.rs  module.rs  pipeline.rs  sampler.rs  texture.rs
