[package]
name = "rending"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitflags = "1.3.2"
codespan-reporting = "0.11.1"
futures-lite = "1.12"
naga = "0.11"
slotmap = "1.0"
thiserror = "1.0"
wgpu-core = "0.15"
fixed = "1.21.0"
raw-window-handle = { version = "0.5.0", default-features = false }

[dependencies.smallvec]
version = "1.10"
features = ["union", "const_generics"]

[dependencies.wgpu]
version = "0.15"
features = ["spirv"]

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg"] }