[package]
name = "rending"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rending_reflect = { version = "0.1.0", path = "crates/rending_reflect", optional = true }
rending_builder = { version = "0.1.0", path = "crates/rending_builder", optional = true }

[features]
default = ["builder", "reflect"]
builder = ["rending_builder"]
reflect = ["rending_reflect"]
glsl = ["rending_reflect/glsl"]

[dev-dependencies]
bytemuck = "1.13.0"
futures-lite = "1.13.0"
glam = { version = "0.24.1", features = ["bytemuck"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
wgpu = "0.17.0"

[workspace]
members = ["crates/rending_reflect", "crates/rending_builder"]
