[package]
name = "rending_reflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { version = "0.13.0", features = ["spv-in"] }
quickerr = "0.3.2"
wgpu = { version = "0.17.0", features = ["spirv"] }

[features]
default = []
glsl = ["wgpu/glsl"]
